--- a/app/views/issues/_edit.html.erb
+++ b/app/views/issues/_edit.html.erb
@@ -6,58 +6,69 @@
                                        :multipart => true} do |f| %>
     <%= error_messages_for 'issue', 'time_entry' %>
     <div class="box">
-    <% if @edit_allowed || !@allowed_statuses.empty? %>
-        <fieldset class="tabular"><legend><%= l(:label_change_properties) %>
-        <% if !@issue.new_record? && !@issue.errors.any? && @edit_allowed %>
-        <small>(<%= link_to l(:label_more), {}, :onclick => 'Effect.toggle("issue_descr_fields", "appear", {duration:0.3}); return false;' %>)</small>
-        <% end %>
-        </legend>
-        <%= render :partial => (@edit_allowed ? 'form' : 'form_update'), :locals => {:f => f} %>
+      <% if @edit_allowed || !@allowed_statuses.empty? %>
+          <fieldset class="tabular">
+            <legend><%= l(:label_change_properties) %>
+              <% if !@issue.new_record? && !@issue.errors.any? && @edit_allowed %>
+                  <small>(<%= link_to l(:label_more), {}, :onclick => 'Effect.toggle("issue_descr_fields", "appear", {duration:0.3}); return false;' %>
+                    )
+                  </small>
+              <% end %>
+            </legend>
+            <%= render :partial => (@edit_allowed ? 'form' : 'form_update'), :locals => {:f => f} %>
+          </fieldset>
+      <% end %>
+      <% if User.current.allowed_to?(:log_time, @project) %>
+          <fieldset class="tabular">
+            <legend><%= l(:button_log_time) %></legend>
+            <% fields_for :time_entry, @time_entry, {:builder => TabularFormBuilder, :lang => current_language} do |time_entry| %>
+                <div class="splitcontentleft">
+                  <p><%= time_entry.text_field :hours, :size => 6, :label => :label_spent_time %> <%= l(:field_hours) %></p>
+                </div>
+                <div class="splitcontentright">
+                  <p><%= time_entry.select :activity_id, activity_collection_for_select_options %></p>
+                </div>
+                <p><%= time_entry.text_field :comments, :size => 60 %></p>
+                <% @time_entry.custom_field_values.each do |value| %>
+                    <p><%= custom_field_tag_with_label :time_entry, value %></p>
+                <% end %>
+            <% end %>
+          </fieldset>
+      <% end %>
+      <div id="issue_fast_reply">
+        <div style="clear: both;"></div>
+        <h3 class="gradient-dx-blu"><%= l(:label_comment) %></h3>
+        <fieldset>
+          <legend><%= l(:field_notes) %></legend>
+
+          <%= text_area_tag 'notes', @notes %>
+          <%# wikitoolbar_for 'notes' %>
+          <%= call_hook(:view_issues_edit_notes_bottom, {:issue => @issue, :notes => @notes, :form => f}) %>
+
+          <p><%= l(:label_attachment_plural) %><br/><%= render :partial => 'attachments/form' %></p>
         </fieldset>
-    <% end %>
-    <% if User.current.allowed_to?(:log_time, @project) %>
-        <fieldset class="tabular"><legend><%= l(:button_log_time) %></legend>
-        <% fields_for :time_entry, @time_entry, { :builder => TabularFormBuilder, :lang => current_language} do |time_entry| %>
-          <div class="splitcontentleft">
-          <p><%= time_entry.text_field :hours, :size => 6, :label => :label_spent_time %> <%= l(:field_hours) %></p>
-          </div>
-          <div class="splitcontentright">
-          <p><%= time_entry.select :activity_id, activity_collection_for_select_options %></p>
-           </div>
-          <p><%= time_entry.text_field :comments, :size => 60 %></p>
-          <% @time_entry.custom_field_values.each do |value| %>
-          <p><%= custom_field_tag_with_label :time_entry, value %></p>
-          <% end %>
-        <% end %>
-    </fieldset>
-    <% end %>
-
-    <fieldset><legend><%= l(:field_notes) %></legend>
-
-    <%= text_area_tag 'notes', @notes %>
-    <%# wikitoolbar_for 'notes' %>
-    <%= call_hook(:view_issues_edit_notes_bottom, { :issue => @issue, :notes => @notes, :form => f }) %>
-
-    <p><%=l(:label_attachment_plural)%><br /><%= render :partial => 'attachments/form' %></p>
-    </fieldset>
+        <br/>
+      </div>
     </div>
 
     <%= f.hidden_field :lock_version %>
-    <%# submit_tag l(:button_submit)  %>
-    <%= submit_tag l(:button_edit) %>
+    <p style="width: 95%; text-align: right;">
+      <%= submit_tag l(:button_save), :class => 'button-blu' %>
+    </p>
+    <br>
     <% if !@issue.new_record? && !@issue.description.nil? && @issue.description.empty? %>
-      <%= link_to_remote l(:label_preview),
-                       { :url => preview_articolo_path(:project_id => @project, :id => @issue),
-                         :method => 'post',
-                         :update => 'preview',
-                         :with => 'Form.serialize("issue-form")',
-                         :complete => "Element.scrollTo('preview')"
-                       }, :accesskey => accesskey(:preview) %>
+        <%= link_to_remote l(:label_preview),
+                           {:url => preview_articolo_path(:project_id => @project, :id => @issue),
+                            :method => 'post',
+                            :update => 'preview',
+                            :with => 'Form.serialize("issue-form")',
+                            :complete => "Element.scrollTo('preview')"
+                           }, :accesskey => accesskey(:preview) %>
 
-      <%= link_to l(:preview_fs_issue), preview_fs_articolo_path(:article_id => @issue.id.to_s), {:target => "_blank", :class => 'icon icon-preview'} %>
+        <%= link_to l(:preview_fs_issue), preview_fs_articolo_path(:article_id => @issue.id.to_s), {:target => "_blank", :class => 'icon icon-preview'} %>
     <% end %>
 <% end %>
 <script type="text/javascript" charset="utf-8">
-    CKEDITOR.replace('notes', { toolbar:'Basic'});
+    CKEDITOR.replace('notes', { toolbar:'Basic', height:200 });
 </script>
 <div id="preview" class="wiki"></div>
