--- a/app/views/issues/_form.html.erb
+++ b/app/views/issues/_form.html.erb
@@ -39,16 +39,14 @@
     <%#, :locals => {:project => @project, :issue => @issue}%>
   </div>
 
-
-
 <% if !@issue.new_record? %>
-  <p><b>
+  <div class="gradient-dx-blu" style="width: 98%;">
     <% if @issue.is_quesito? %>
       <%= l(:quesito_risposta_rapida, :num => @issue.quesito_news.id.to_s) %>
     <% else %>
       <%= l(:content_articolo) %>
     <% end %>
-  </b></p>
+ </div>
       <div id="ck-box-issues" ><%= f.cktext_area :description , :height => 800,  :swf_params => {:assetable_type => 'Test', :assetable_id => 1} %></div>
 <% end %>
 
