rimesso check administrator su _form altrimenti non salva

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -43,6 +43,7 @@
   <div class="splitcontentright">
   <fieldset  class="box tabular">
     <legend><%=l(:label_preferences)%></legend>
+    <p><%= f.check_box :admin %></p>
     <p><%= f.select :language, lang_options_for_select %></p>
   </fieldset>
    </div>
