--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -20,7 +20,7 @@
 <p>
 <%= label_tag "message_content", l(:description_message_content), :class => "hidden-for-sighted" %>
 <%= f.text_area :content, :cols => 80, :rows => 15, :class => 'wiki-edit', :id => 'message_content' %></p>
-<%= wikitoolbar_for 'message_content' %>
+<%#wikitoolbar_for 'message_content' %>
 <!--[eoform:message]-->
 
 <p><%= l(:label_attachment_plural) %><br />
