--- a/app/views/issues/_form.html.erb
+++ b/app/views/issues/_form.html.erb
@@ -6,11 +6,11 @@
       </p>
   <% end %>
 
-<% if !@issue.new_record? %>
-  <p class="changeauthor">
-<%= f.select :author_id, principals_options_for_select(@issue.assignable_users, @issue.author), :include_blank => false %>&nbsp;&nbsp;<%= avatar(@issue.author, { :size => "50", :class => "no-div" }) %><%= link_to @issue.author, user_path(@issue.author), :target => "_blank" %>
+  <p>
+    <% if !@issue.new_record? %>
+<%= f.select :author_id, principals_options_for_select(@issue.assignable_users, @issue.author), :include_blank => false %>&nbsp;&nbsp;<%= link_to @issue.author, user_path(@issue.author), :target => "_blank" %>
+    <% end %>
   </p>
-<% end %>
 
   <p>
     <% if !@issue.new_record? && @issue.se_prenotazione %>
@@ -39,14 +39,16 @@
     <%#, :locals => {:project => @project, :issue => @issue}%>
   </div>
 
+
+
 <% if !@issue.new_record? %>
-  <div class="gradient-dx-blu" style="width: 98%;">
+  <p><b>
     <% if @issue.is_quesito? %>
       <%= l(:quesito_risposta_rapida, :num => @issue.quesito_news.id.to_s) %>
     <% else %>
       <%= l(:content_articolo) %>
     <% end %>
- </div>
+  </b></p>
       <div id="ck-box-issues" ><%= f.cktext_area :description , :height => 800,  :swf_params => {:assetable_type => 'Test', :assetable_id => 1} %></div>
 <% end %>
 
@@ -65,4 +67,3 @@
 <% end %>
 
 <%= call_hook(:view_issues_form_details_bottom, {:issue => @issue, :form => f}) %>
-
