--- a/app/views/journals/_notes_form.html.erb
+++ b/app/views/journals/_notes_form.html.erb
@@ -1,22 +1,37 @@
-<% form_remote_tag(:url => {}, :html => { :id => "journal-#{@journal.id}-form" }) do %>
+<% form_remote_tag(:url => {}, :html => {:id => "journal-#{@journal.id}-form"}) do %>
     <%= label_tag "notes", l(:description_notes), :class => "hidden-for-sighted" %>
-    <%= text_area_tag :notes, @journal.notes,
-          :id => "journal_#{@journal.id}_notes",
-          :class => 'wiki-edit',
-          :rows => (@journal.notes.blank? ? 10 : [[10, @journal.notes.length / 50].max, 100].min) %>
-    <%= call_hook(:view_journals_notes_form_after_notes, { :journal => @journal}) %>
-    <p><%= submit_tag l(:button_save) %>
-    <%= link_to_remote l(:label_preview),
-                       { :url => preview_issue_path(:project_id => @project, :id => @journal.issue),
-                         :method => 'post',
-                         :update => "journal_#{@journal.id}_preview",
-                         :with => "Form.serialize('journal-#{@journal.id}-form')",
-                         :complete => "Element.scrollTo('journal_#{@journal.id}_preview')"
-                       }, :accesskey => accesskey(:preview) %>
-    |
-    <%= link_to l(:button_cancel), '#', :onclick => "Element.remove('journal-#{@journal.id}-form'); " +
-                                                    "Element.show('journal-#{@journal.id}-notes'); return false;" %></p>
+    <%= text_area_tag 'notes', @journal.notes,
+                      :id => "journal_#{@journal.id}_notes",
+                      :rows => (@journal.notes.blank? ? 10 : [[10, @journal.notes.length / 50].max, 100].min) %>
+    <%= call_hook(:view_journals_notes_form_after_notes, {:journal => @journal}) %>
+    <p style="width: 95%; text-align: right;">
+      <%= submit_tag l(:button_save), :class => 'button-blu' %>
+    </p>
+      <!--
+      <%#link_to_remote l(:label_preview),
+                         {:url => preview_issue_path(:project_id => @project, :id => @journal.issue),
+                          :method => 'post',
+                          :update => "journal_#{@journal.id}_preview",
+                          :with => "Form.serialize('journal-#{@journal.id}-form')",
+                          :complete => "Element.scrollTo('journal_#{@journal.id}_preview')"
+                         }, :accesskey => accesskey(:preview) %>
+      |
+      <%# link_to l(:button_cancel), '#', :onclick => "Element.remove('journal-#{@journal.id}-form'); " +
+              "Element.show('journal-#{@journal.id}-notes'); return false;" %>
+              -->
 
     <div id="journal_<%= @journal.id %>_preview" class="wiki"></div>
 <% end %>
-<%= wikitoolbar_for "journal_#{@journal.id}_notes" %>
+<script type="text/javascript" charset="utf-8">
+    ist = "journal_" + <%= @journal.id.to_s %> +"_notes"
+    if (CKEDITOR.instances[ist]) {
+        delete CKEDITOR.instances[ist]
+    }
+    ;
+    CKEDITOR.replace(ist, { toolbar:'Basic', height:200, on:{
+        blur:function (event) {
+            document.getElementById(ist).value = this.getData();
+        }
+    }
+    });
+</script>
