--- a/app/views/newsletters/invii.html.erb
+++ b/app/views/newsletters/invii.html.erb
@@ -1,4 +1,9 @@
 <div class="contextual">
+<em class="hide">Limit <%= @limit %></em>
+<em class="hide">offset <%= @offset %></em>
+<em class="hide">asso id <%= @asso_id %></em>
+<em class="hide">asso id <%= @role %></em>
+
 </div>
 
 <div class="box">
@@ -9,46 +14,71 @@
 
 <% form_tag({}, :method => :get) do %>
 <fieldset><legend><%= l(:label_filter_plural) %></legend>
-<label for='role'><%= l(:field_abbonamento) %>:</label>
-<%= select_tag 'role', users_roles_options_for_select(@role), :class => "small", :onchange => "this.form.submit(); return false;"  %>
+<p class="asso-select">
+<%# select_tag :asso_id, options_from_collection_for_select(Asso.all, 'id', 'name', @asso_id)  %>
+<%#(Asso.all.collect {|c| [smart_truncate(c.name, 200), c.id]}), {:include_blank => true, :required => false, :size => 60, :title => 'cambia asso'} %>
+<label for='asso_id'><%= l(:field_asso) %>:</label>
+<%= select(:asso,
+           :asso_id,
+           Asso.all.collect{ |s| [truncate(s.name, :length => 120), s.id] },
+           {:include_blank => 'Tutti', :class => "small", :selected => @asso_id, :onchange => "this.form.submit(); return false;" }) %>
+</p>
+
+<label for='role'><%= l(:field_abbonamento_type) %>:</label>
+<%= select_tag 'role', users_roles_options_for_select(@role), :class => "small", :onchange => "this.form.submit(); return false;", :selected => @role  %>
 
 <label for='name'><%= l(:label_user) %>:</label>
 <%= text_field_tag 'name', params[:name], :size => 30 %>
 <%= submit_tag l(:button_apply), :class => "small", :name => nil %>
-<%= link_to l(:button_clear), users_path, :class => 'icon icon-reload' %>
+<%= link_to l(:button_clear), newsletter_invii_path(:project_id => @project.id), :class => 'icon icon-reload' %>
 </fieldset>
 <% end %>
 &nbsp;
 
 <div class="autoscroll">
-<table class="list">
+<table id="tblinvii" class="list">
   <thead><tr>
-  <%= sort_header_tag('login', :caption => l(:field_login)) %>
-  <%= sort_header_tag('firstname', :caption => l(:field_firstname)) %>
-  <%= sort_header_tag('lastname', :caption => l(:field_lastname)) %>
+  <%= sort_header_tag('lastname', :caption => l(:field_user_fee)) %>
+  <%# sort_header_tag('firstname', :caption => l(:field_firstname)) %>
+  <%# sort_header_tag('lastname', :caption => l(:field_lastname)) %>
   <%= sort_header_tag('mail', :caption => l(:field_mail)) %>
   <%= sort_header_tag('datascadenza', :caption => l(:field_data_scadenza), :default_order => 'desc') %>
   <%= sort_header_tag('asso_id', :caption => l(:field_asso), :default_order => 'desc') %>
-    <th><p class="icon icon-email"></p></th>
+    <th style="text-align:left; width: 40px;"><i class="icon icon-email" title="Imposti per l'invio email"></i><input id="checkbox_selector" type="checkbox" name="invia" class="selectall" checked="checked" /></th>
   </tr></thead>
   <tbody>
 <% for user in @users -%>
   <tr class="user <%= cycle("odd", "even") %> <%= %w(anon active registered locked)[user.status] %>">
-  <td class="username"><%= avatar(user, { :size => "14", :class => "no-div" }) %><%= link_to h(user.login), edit_user_path(user) %></td>
-  <td class="firstname"><%= h(user.firstname) %></td>
-  <td class="lastname"><%= h(user.lastname) %></td>
+
+<%# user.login user.firstname user.lastname %>
+  <td class="username"><%= avatar(user, { :size => "14", :class => "no-div" }) %><%= link_to h(user.name), edit_user_path(user) %></td>
   <td class="email"><%= mail_to(h(user.mail)) %></td>
   <%# align="center"><%= checked_image user.admin? %>
   <td class="datascadenza" align="center"><%= format_date(user.scadenza) %></td>
-  <td class="asso_id" align="center"><%= user.associazione_affiliata.name unless user.my_abbo_isprivate? %></td>
-    <td class="buttons">
+  <td class="asso_id" align="center"><%= h truncate(user.associazione_affiliata.name, :length => 30) unless user.my_abbo_isprivate? %></td>
+    <td class="checkbox"><%= check_box_tag 'ids[]', user.id, {:name => "invia"} %></td>
       <%# change_status_link(user) %>
       <%# link_to(l(:button_delete), user, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') unless User.current == user %>
+    </td>
+    <td>
+      <%# user.scoped_by_newsletter_users(@).nil? %>
     </td>
   </tr>
 <% end -%>
   </tbody>
 </table>
+<script type="text/javascript" charset="utf-8">
+
+    var checkboxes = $$("#tblinvii input[type=checkbox]");
+    var cbControl = $("checkbox_selector");
+
+    cbControl.observe("click", function(){
+      checkboxes.each(function(box){
+        box.checked = cbControl.checked;
+      });
+    });
+
+  </script>
 </div>
 <p class="pagination"><%= pagination_links_full @user_pages, @user_count %></p>
 
