--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,6 +30,33 @@
 </ul>
 <% end %>
 <%= call_hook :view_account_left_bottom, :user => @user %>
+
+
+<h3><%=l(:label_newsletters)%></h3>
+  <%# newsletters = NewsletterUser.per_user(@user.id) %>
+  <% newsletters = NewsletterUser.scoped_by_user_id(@user.id) %>
+  <% if newsletters.any? && (newsletters.count > 1)%>
+    <%= l(:label_total) %>:<strong class="total center"><%= h(newsletters.count - 1) %></strong>
+    <table class="subtable list invii" width="100%">
+      <tr>
+        <th style="width:40%; text-align:left;"><%= l(:label_data) %></th>
+        <th style="width:40%; text-align:left;"><%= l(:label_project) %></th>
+        <th style="width:20%; text-align:left;"></th>
+      </tr>
+      <% newsletters.each do |invio| %>
+        <tr>
+          <td><%= format_date(invio.data) %></td>
+          <td class="buttons">
+              <%= link_to(h(invio.project.name), project_path(invio.project), :class => 'icon icon-globe icon-adjust-min') if invio.have_project? %>
+          </td>
+          <td><%= check_box_tag '', 1, invio.sended, :disabled => 'disabled'  %></td>
+        </tr>
+      <% end %>
+    </table>
+  <% else %>
+    <%=l(:label_newsletter_none)%>
+  <% end %>
+
 </div>
 
 <div class="splitcontentright">
@@ -65,6 +92,7 @@
 <% end %>
 <% end %>
 <%= call_hook :view_account_right_bottom, :user => @user %>
+
 </div>
 
 <% html_title @user.name %>
