--- a/app/views/editorial/_blocco_sidebar1.html.erb
+++ b/app/views/editorial/_blocco_sidebar1.html.erb
@@ -19,5 +19,5 @@
   <% unless @articolo.nil? %>
       <%= render :partial => 'blocco_art_evidenziati' %>
   <% end %>
-
+  <%= render :partial => 'blocco_social' %>
 </div>
