--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -6,7 +6,7 @@
 
 .fs-art-attachments {
     text-align: center;
-    padding: 10px 10%;
+    padding: 10px auto;
     border-bottom: solid 1px grey;
 
 }
