--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -27,8 +27,8 @@
                    </div>
                    <div class='fs-social'>
                      <div class='fs-social-fb '>
-                       <script src="http://connect.facebook.net/it_IT/all.js#xfbml=1"></script>
-                       <fb:like href="" layout="button_count" show_faces="false" width="450" font=""></fb:like>
+                       <a href="https://www.facebook.com/sharer/sharer.php?s=100&amp;p%5Btitle%5D=titlehere&amp;p%5Burl%5D=http%3A%2F%2Fwww.yoururlhere.com&amp;p%5Bsummary%5D=yoursummaryhere&amp;p%5Bimages%5D%5B0%5D=https://www.google.com/images/srpr/logo3w.png" target="_blank" >
+                         <%= image_tag "ico/fb-share.jpg" %>    </a>
                      </div>
                      <div class='fs-social-tw '>
                        <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="fiscosport">Tweet</a>
