--- a/app/views/editorial/pages_abbonamenti.html.erb
+++ b/app/views/editorial/pages_abbonamenti.html.erb
@@ -32,7 +32,7 @@
             <div id="fs-pag-abbonamenti-header">
               <div><h1 class="x-yellow3" style="font-weight: bold;"> Entra anche tu nel mondo Fiscosport!</h1>
               <p class="x-yellow2">Con l'abbonamento accedi a tutti i contenuti del sito!</p>
-                <%= link_to "REGISTATI ORA!", url_for(:controller => "account",:action => 'register'), :class => "fs-blu-button"%>
+                <%= link_to "REGISTRATI ORA!", url_for(:controller => "account",:action => 'register'), :class => "fs-blu-button"%>
                 <br>
               </div>
             </div>
