--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,7 +1,7 @@
 <h2><%= @author.nil? ? l(:label_activity) : l(:label_user_activity, link_to_user(@author)) %></h2>
 <p class="subtitle"><%= l(:label_date_from_to, :start => format_date(@date_to - @days), :end => format_date(@date_to-1)) %></p>
 
-<div id="activity">
+<div id="activitz">
 <% @events_by_day.keys.sort.reverse.each do |day| %>
 <h3><%= format_activity_day(day) %></h3>
 <dl>
